# aforro-backend-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
aforro_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
apps/orders/: apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py
apps/products/: apps.py  models.py
apps/products/management/commands/: seed_data.py
apps/products/migrations/: 0001_initial.py
apps/search/: apps.py  serializers.py  urls.py  views.py
apps/stores/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/stores/migrations/: 0001_initial.py
tests/: test_inventory.py  test_order_rejected.py  test_orders.py  test_search.py
